# fish-shell

./: .cirrus.yml  .clang-format  .clang-tidy  .cppcheck.rule  .cppcheck.rules  .cppcheck.suppressions  .editorconfig  .gitattributes  .gitignore  .gitmodules  .oclint  .travis.yml  AGENTS.md  BSDmakefile  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  COPYING  Cargo.toml  ChangeLog  Dockerfile  Doxyfile  Doxyfile.help  Doxyfile.help.in  Fish-Shell.sublime-project  Fish-Shell.sublime-workspace  GNUmakefile  INSTALL  LICENSE  Makefile  Makefile.cpp  Makefile.in  NATIVE_BUILDS.rst  README  README.md  README.rst  (+240 more)
cmake/corrosion/: CMakeLists.txt  LICENSE  README.md  RELEASES.md
crates/common/: Cargo.toml  build.rs
crates/fallback/: Cargo.toml  build.rs
crates/fluent/: Cargo.toml  build.rs
crates/fluent-check/: Cargo.toml
crates/fluent-extraction/: Cargo.toml  build.rs
crates/gettext-extraction/: Cargo.toml  build.rs
crates/gettext-maps/: Cargo.toml  build.rs
crates/printf/: Cargo.toml  LICENSE
crates/util/: Cargo.toml
crates/wcstringutil/: Cargo.toml  build.rs
crates/wgetopt/: Cargo.toml
crates/xtask/: Cargo.toml
fish-rust/: Cargo.toml  build.rs
fish-rust/src/: abbrs.rs  ast.rs  autoload.rs  bitset.rs  color.rs  common.rs  compat.c  compat.rs  complete.rs  curses.rs  editable_line.rs  env.rs  env_dispatch.rs  env_universal_common.rs  event.rs  exec.rs  expand.rs  fallback.rs  fd_monitor.rs  fd_readable_set.rs  fds.rs  ffi.rs  ffi_init.rs  ffi_tests.rs  fish.rs  fish_indent.rs  fish_key_reader.rs  flog.rs  function.rs  future.rs  future_feature_flags.rs  global_safety.rs  highlight.rs  history.rs  history_file.rs  input.rs  input_common.rs  input_ffi.rs  io.rs  job_group.rs  (+43 more)
fish-rust/widestring-suffix/: Cargo.toml
gettext_extraction/: Cargo.toml
gettext_extraction/src/: lib.rs
muparser-2.2.5/: CMakeLists.txt  Install.txt  License.txt  Makefile.in  configure
muparser-2.2.5/docs/: Doxyfile  muparser_doc.html
muparser-2.2.5/include/: muParser.h  muParserBase.h  muParserBytecode.h  muParserCallback.h  muParserDLL.h  muParserDef.h  muParserError.h  muParserFixes.h  muParserInt.h  muParserStack.h  muParserTemplateMagic.h  muParserTest.h  muParserToken.h  muParserTokenReader.h
muparser-2.2.5/lib/: Readme.txt
muparser-2.2.5/src/: muParser.cpp  muParserBase.cpp  muParserBytecode.cpp  muParserCallback.cpp  muParserDLL.cpp  muParserError.cpp  muParserInt.cpp  muParserTest.cpp  muParserTokenReader.cpp
pcre2/: 132html  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  CheckMan  HACKING  LICENCE  NEWS  NON-AUTOTOOLS-BUILD  PrepareRelease  README  RunTest  aclocal.m4  ar-lib  config-cmake.h.in  configure.ac  libpcre2-16.pc.in  libpcre2-32.pc.in  libpcre2-8.pc.in  libpcre2-posix.pc.in  pcre2-config.in  test-driver
pcre2-10.20/: .gitignore  132html  AUTHORS  CMakeLists.txt  ChangeLog  HACKING  LICENCE  Makefile.am  Makefile.in  NEWS  PrepareRelease  README  RunGrepTest  RunTest  RunTest.bat  aclocal.m4  config-cmake.h.in  configure  configure.ac  libpcre2-32.pc.in  pcre2-config.in  perltest.sh
pcre2-10.20/doc/: pcre2-config.1  pcre2-config.txt  pcre2.3  pcre2.txt  pcre2_callout_enumerate.3  pcre2_code_free.3  pcre2_compile.3  pcre2_compile_context_copy.3  pcre2_compile_context_create.3  pcre2_compile_context_free.3  pcre2_config.3  pcre2_dfa_match.3  pcre2_general_context_copy.3  pcre2_general_context_create.3  pcre2_general_context_free.3  pcre2_get_error_message.3  pcre2_get_mark.3  pcre2_get_ovector_count.3  pcre2_get_ovector_pointer.3  pcre2_get_startchar.3  pcre2_jit_compile.3  pcre2_jit_free_unused_memory.3  pcre2_jit_match.3  pcre2_jit_stack_assign.3  pcre2_jit_stack_create.3  pcre2_jit_stack_free.3  pcre2_maketables.3  pcre2_match.3  pcre2_match_context_copy.3  pcre2_match_context_create.3  pcre2_match_context_free.3  pcre2_match_data_create.3  pcre2_match_data_create_from_pattern.3  pcre2_match_data_free.3  pcre2_pattern_info.3  pcre2_serialize_decode.3  pcre2_serialize_encode.3  pcre2_serialize_free.3  pcre2_serialize_get_number_of_codes.3  pcre2_set_bsr.3  (+41 more)
pcre2-10.20/src/: config.h.generic  config.h.in  dftables.c  pcre2.h.generic  pcre2.h.in  pcre2_auto_possess.c  pcre2_compile.c  pcre2_config.c  pcre2_context.c  pcre2_dfa_match.c  pcre2_error.c  pcre2_internal.h  pcre2_intmodedep.h  pcre2_jit_compile.c  pcre2_jit_match.c  pcre2_jit_misc.c  pcre2_jit_test.c  pcre2_maketables.c  pcre2_match.c  pcre2_match_data.c  pcre2_newline.c  pcre2_ord2utf.c  pcre2_pattern_info.c  pcre2_printint.c  pcre2_serialize.c  pcre2_string_utils.c  pcre2_study.c  pcre2_substitute.c  pcre2_substring.c  pcre2_tables.c  pcre2_ucd.c  pcre2_ucp.h  pcre2_valid_utf.c  pcre2_xclass.c  pcre2grep.c  pcre2posix.c  pcre2posix.h  pcre2test.c
pcre2-10.20/testdata/: grepinput8  grepoutput  grepoutput8  testinput1  testinput10  testinput11  testinput12  testinput13  testinput14  testinput15  testinput16  testinput17  testinput18  testinput19  testinput2  testinput3  testinput4  testinput5  testinput6  testinput7  testinput8  testinput9  testinputEBC  testoutput1  testoutput10  testoutput11-16  testoutput11-32  testoutput12-16  testoutput12-32  testoutput13  testoutput14  testoutput15  testoutput16  testoutput17  testoutput18  testoutput19  testoutput2  testoutput3  testoutput3A  testoutput3B  (+11 more)
pcre2-10.22/: .gitignore  132html  CMakeLists.txt  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  PrepareRelease  README  RunGrepTest  RunTest  aclocal.m4  config-cmake.h.in  configure  configure.ac  perltest.sh
pcre2-10.22/src/: config.h.generic  config.h.in  pcre2.h.generic  pcre2.h.in  pcre2_auto_possess.c  pcre2_compile.c  pcre2_dfa_match.c  pcre2_error.c  pcre2_internal.h  pcre2_intmodedep.h  pcre2_match.c  pcre2_printint.c  pcre2_study.c  (+5 more)
pcre2-10.32/: CMakeLists.txt  ChangeLog  CheckMan  HACKING  Makefile.am  Makefile.in  NEWS  NON-AUTOTOOLS-BUILD  PrepareRelease  README  RunGrepTest  RunTest  aclocal.m4  config-cmake.h.in  configure  configure.ac  libpcre2-posix.pc.in  perltest.sh
printf/: Cargo.toml  README.md
(+4295 files in other folders)
